classDiagram
    class ITenantRepository {
        <<interface>>
        +GetAllAsync() Task~IReadOnlyList~
        +GetByIdAsync(Guid) Task~Tenant?~
        +GetBySlugAsync(string) Task~Tenant?~
        +SlugExistsAsync(string) Task~bool~
        +AddAsync(Tenant) Task
        +DeleteAsync(Tenant) Task
        +SaveChangesAsync() Task
    }
    class IRoutingRuleRepository {
        <<interface>>
        +GetByTenantAsync(Guid) Task~IReadOnlyList~
        +GetByIdAndTenantAsync(Guid, Guid) Task~RoutingRule?~
        +AddAsync(RoutingRule) Task
        +UpdateAsync(RoutingRule) Task
        +DeleteAsync(RoutingRule) Task
    }
    class INotificationLogRepository {
        <<interface>>
        +GetByTenantAsync(Guid, page, size) Task~IReadOnlyList~
        +AddAsync(NotificationLog) Task
    }
    class IDatabaseProvisioner {
        <<interface>>
        +ProvisionAsync(slug) Task~string~
        +DeprovisionAsync(connStr) Task
    }
    class INotificationDispatcher {
        <<interface>>
        +string ChannelType
        +DispatchAsync(DispatchRequestDto, ct) Task~DispatchResultDto~
    }
    class IDispatcherRegistry {
        <<interface>>
        +Resolve(channelType) INotificationDispatcher?
        +RegisteredChannelTypes IReadOnlyList~string~
    }
    class IRateLimiter {
        <<interface>>
        +TryConsume(tenantId, limitPerMinute) bool
    }
    class TenantService {
        -ITenantRepository
        -IDatabaseProvisioner
        +GetAllAsync()
        +GetByIdAsync(id)
        +CreateAsync(request)
        +UpdateAsync(id, request)
        +DeleteAsync(id)
    }
    class RoutingRuleService {
        -IRoutingRuleRepository
        -ITenantRepository
        +GetByTenantAsync(tenantId)
        +GetByIdAsync(id, tenantId)
        +CreateAsync(tenantId, request)
        +UpdateAsync(id, tenantId, request)
        +DeleteAsync(id, tenantId)
    }
    class EventIngestionService {
        -ITenantRepository
        -IRoutingRuleRepository
        -INotificationLogRepository
        -IDispatcherRegistry
        -IRateLimiter
        +IngestAsync(request)
        +GetLogsAsync(tenantId, ...)
    }

    TenantService --> ITenantRepository
    TenantService --> IDatabaseProvisioner
    RoutingRuleService --> IRoutingRuleRepository
    RoutingRuleService --> ITenantRepository
    EventIngestionService --> ITenantRepository
    EventIngestionService --> IRoutingRuleRepository
    EventIngestionService --> INotificationLogRepository
    EventIngestionService --> IDispatcherRegistry
    EventIngestionService --> IRateLimiter
    IDispatcherRegistry --> INotificationDispatcher
